# PeriphX

./: .gitignore  README.md  README_zh_CN.md  pyproject.toml
components/core/: data_router.v  protocol_parse.v  spi_slave.v
components/pwm_led/: interface.yml  temp_manifest.yml
components/pwm_led/rtl/: pwm_led.v
components/uart/: interface.yml
components/uart/rtl/: uart_baud_gen.v  uart_rx.v  uart_top.v  uart_tx.v
components/uart/sim/: uart_baud_gen_tb.v  uart_rx_tb.v  uart_top_tb.v  uart_tx_tb.v
docs/: frame_format.txt
examples/pwm_led/: README.md  README_zh_CN.md
examples/pwm_led/src/: main.c  periphx_sdk.c  periphx_sdk.h
mlr/: __main__.py  builder.py  cli.py  codegen.py  frame_formate.txt  project.py  simple_yaml.py
tests/: manifest.yaml  tb_mlr_spi_slave.v  tcl_test.py
userSpace/: manifest.yaml
